<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddSuggestionActivity">

    <ImageView
        android:id="@+id/suggestion_icon"
        android:layout_width="match_parent"
        android:layout_height="276dp"
        android:src="@drawable/drinks"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <TextView
        android:id="@+id/suggestion_nameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/suggestion_icon"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>
    <EditText
        android:id="@+id/suggestion_nameInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/suggestion_nameText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/suggestion_categoryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/category"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/suggestion_nameInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>

    <Spinner
        android:id="@+id/suggestion_categoryEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/suggestion_categoryText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/suggestion_flavorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/flavor_profile"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/suggestion_categoryEdit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/suggestion_flavorInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/suggestion_flavorText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/suggestion_ingredientsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ingredients"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/suggestion_flavorInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/suggestion_ingredientsInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/suggestion_ingredientsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/suggestion_instructionsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructions"
        android:textColor="@color/black"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@id/suggestion_ingredientsInput"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"/>
    <EditText
        android:id="@+id/suggestion_instructionsInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/light_gray"
        app:layout_constraintTop_toBottomOf="@id/suggestion_instructionsText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="5dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <Button
        android:id="@+id/suggestion_button"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/add_drink"
        app:layout_constraintTop_toBottomOf="@id/suggestion_instructionsInput"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"/>

    <include layout="@layout/bottom_navigation" />

</androidx.constraintlayout.widget.ConstraintLayout>